# Software-ontwikkeling-VESOFTON

./: .clang-tidy  .gitignore  .gitmodules  001-SquareTestcase_8cpp.html  001-SquareTestcase_8cpp.js  001-SquareTestcase_8cpp_8o_8d.html  001-SquareTestcase_8dir_2main_8cpp_8o_8d.html  002-textTestcase_8cpp.html  002-textTestcase_8cpp.js  002-textTestcase_8cpp_8o_8d.html  002-textTestcase_8dir_2main_8cpp_8o_8d.html  010-TestCase_8cpp.html  020-TestCase-1_8cpp.html  020-TestCase-2_8cpp.html  030-Asn-Require-Check_8cpp.html  100-Fix-Section_8cpp.html  110-Fix-ClassFixture_8cpp.html  120-Bdd-ScenarioGivenWhenThen_8cpp.html  210-Evt-EventListeners_8cpp.html  231-Cfg-OutputStreams_8cpp.html  232-Cfg-CustomMain_8cpp.html  300-Gen-OwnGenerator_8cpp.html  301-Gen-MapTypeConversion_8cpp.html  302-Gen-Table_8cpp.html  310-Gen-VariablesInGenerators_8cpp.html  311-Gen-CustomCapture_8cpp.html  API__fonts_8h.html  API__fonts_8h_source.html  API__gfx__text_8cpp.html  API__gfx__text_8h.html  API__gfx__text_8h_source.html  API__graphics_8cpp.html  API__graphics_8cpp.js  API__graphics_8h.html  API__graphics_8h.js  API__graphics_8h_source.html  API__simple__shapes_8cpp.html  API__simple__shapes_8h.html  API__simple__shapes_8h_source.html  ASM__CHAL_8h.html  (+2105 more)
app/: .clang-format  .mxproject  CMakeLists.txt  README.md  STM32F407VGTx_FLASH.ld  (+5 more)
app/Tests/: 001-SquareTestcase.cpp  002-textTestcase.cpp  CMakeLists.txt  main.cpp
example_project/: CMakeLists.txt  README.md
example_project/lib/: API_graphics.h
example_project/lib/cmake/: gcc-arm-none-eabi.cmake
example_project/src/: main.cpp
(+380 files in other folders)
